fixed gap header

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -336,7 +336,7 @@ a {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-right: 6.2rem;
+  margin-right: 16.8rem;
 }
 .header__item {
   padding: 1rem;
