--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -75,7 +75,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-right: 6.2rem;
+    margin-right: 16.8rem;
 
   }
 
